@@ -274,6 +274,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP490  (EXPERIMENTAL)
        Canon PIXMA MP530  (EXPERIMENTAL)
        Canon PIXMA MP900  (EXPERIMENTAL)
+       Canon PIXMA MG5300 (EXPERIMENTAL)
+       Canon PIXMA MG6200 (EXPERIMENTAL)
 
      - Epson inkjet printers:
 
